Update .gitignore for public repository

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,47 @@
+#.env
+#.idea
+#db.sqlite3
+
+# Environment variables
 .env
-.idea
+.env.local
+.env.*.local
+
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+*.pyc
+
+# Virtual Environment
+.venv/
+venv/
+ENV/
+env/
+virtualenv/
+
+# Django
 db.sqlite3
+db.sqlite3-journal
+*.log
+local_settings.py
+staticfiles/
+media/
+
+# Database
+*.db
+*.sqlite
+
+# OS
+.DS_Store
+Thumbs.db
+*.bak
